# python-template

./: README.rst  pyproject.toml
.github/workflows/: static.yml
docs/source/: conf.py  index.rst  project-setup.rst
