[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "A python project that can serve as a template. The aim is to learn the appropriate tools for Python development."
authors = ["Pierre-Loïc FELTER"]
readme = "README.md"
packages = [{include = "python_template"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
sphinx = "^6.1.3"
furo = "^2022.12.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
